rendered-manifests.yaml
---
# Source: backend-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  labels:
    helm.sh/chart: backend-api-0.1.0
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/instance: backend-api
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/instance: backend-api
---
# Source: backend-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  labels:
    helm.sh/chart: backend-api-0.1.0
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/instance: backend-api
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-api
      app.kubernetes.io/instance: backend-api
  template:
    metadata:
      labels:
        helm.sh/chart: backend-api-0.1.0
        app.kubernetes.io/name: backend-api
        app.kubernetes.io/instance: backend-api
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: backend-api
      containers:
        - name: backend-api
          image: "jinseok93338/backend-api-poc:v0.1.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
---
# Source: backend-api/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend-api
  namespace: base-app
  labels:
    helm.sh/chart: backend-api-0.1.0
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/instance: backend-api
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
    - web # Assuming the default Traefik entrypoint is 'web'
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend-api
          port: 3000
      middlewares:
        - name: backend-api-strip-prefix
          # namespace is not needed for middleware in the same namespace
          # namespace: base-app
---
# Source: backend-api/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: backend-api-strip-prefix
  namespace: base-app
  labels:
    helm.sh/chart: backend-api-0.1.0
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/instance: backend-api
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  stripPrefix:
    prefixes:
      - /api
    # forceSlash: false # Uncomment if needed
---
# Source: backend-api/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "backend-api-test-connection"
  labels:
    helm.sh/chart: backend-api-0.1.0
    app.kubernetes.io/name: backend-api
    app.kubernetes.io/instance: backend-api
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['backend-api:3000']
  restartPolicy: Never
